VISHNU GR PENDING CLEARING

--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -224,7 +224,7 @@
                     <h3 class="h6 mb-0">
                       <a class="d-block" data-bs-toggle="collapse" href="#collapsepaypal" role="button"
                         aria-expanded="false" aria-controls="collapsepaypal" style="text-decoration: none">
-                        Razor Pay
+                        online payment (via Razorpay) 
                       </a>
                     </h3>
                   </label>
