--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -38,6 +38,8 @@
             <% } %>
               <li><a href="/wallet"><i class="fa-solid fa-wallet" style="color: #000000;"></i><span
                     style="margin-left: 3px;">Wallet</span></a></li>
+                    <li><a href="/referral"><i class="fa-solid fa-user-group" style="color: #000000;"></i><span style="margin-left: 3px;">Referral</span></a></li>
+
               <li><a href="/logout"><i class="fa-solid fa-arrow-right-from-bracket" style="color: #000000;"></i><span
                     style="margin-left: 3px;">Logout</span></a></li>
         </ul>
