--- a/views/users/myAddress.ejs
+++ b/views/users/myAddress.ejs
@@ -44,10 +44,11 @@
           <li><a  href="/dashboard"><i class="fa-solid fa-user" style="color: #000000;"></i><span style="margin-left: 3px;">Dashboard</span> </a></li>
           <li><a href="/orders"><i class="fa-solid fa-briefcase" style="color: #000000;"></i><span  style="margin-left: 3px;">Orders</span></a></li>
           <li><a class="sdashbord" href="/my-address"><i class="fa-solid fa-location-dot" style="color: #ffffff;"></i><span style="margin-left: 3px; color: #ffffff;">My Address</span></a></li>
-          <% if(user.isGoogleLogin === false){ %>
+          <!-- <% if(user.isGoogleLogin === false){ %>
           <li><a href="/change-password"><i class="fa-solid fa-key" style="color: #000000;"></i><span style="margin-left: 3px;">Change Password</span></a></li>
-          <% } %>
+          <% } %> -->
           <li><a href="/wallet"><i class="fa-solid fa-wallet" style="color: #000000;"></i><span style="margin-left: 3px;">Wallet</span></a></li>
+          <li><a href="/referral"><i class="fa-solid fa-user-group" style="color: #000000;"></i><span style="margin-left: 3px;">Referral</span></a></li>
           <li><a href="/logout"><i class="fa-solid fa-arrow-right-from-bracket" style="color: #000000;"></i><span style="margin-left: 3px;">Logout</span></a></li>
         </ul>
       </div>
