referral half done

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -74,6 +74,14 @@
             <input class="number" name="mobileNumber" id="mobileNumber" type="tel" placeholder="Mobile Number (For order status update)">
         </div>
         <p id="mobileNumberError" class="errormessage"></p>
+        
+        <!-- Referral Code -->
+        <div class="referralCode">
+          <input type="text" name="referralCode" id="referralCode" placeholder="Referral Code">
+        </div>
+        <p id="referralCodeError" class="errormessage"></p>
+
+        <!-- Gender -->
         <div class="gender">
             <label>Gender</label>
             <label><input type="radio" id="gender1" name="gender" value="Male" checked> Male</label>
