--- a/views/users/wallet.ejs
+++ b/views/users/wallet.ejs
@@ -62,6 +62,7 @@
                 <th>#</th>
                 <th>Amount</th>
                 <th>Type</th>
+                <th>Time</th>
                 <th>Date</th>
               </tr>
             </thead>
@@ -71,7 +72,9 @@
                 <td><%= index + 1 %></td>
                 <td> <%= transaction.amount %></td>
                 <td><%= transaction.type %></td>
-                <td><%= new Date(transaction.date).toLocaleDateString() %></td>
+                <td><%= transaction.time %></td>
+                <td><%= transaction.date%></td>
+
               </tr>
               <% }) %>
             </tbody>
